src/models/create_query/SqnCreateParser.py
# Generated from SqnCreate.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SqnCreateParser ( Parser ):

    grammarFileName = "SqnCreate.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'\"create\"'", "':'", "'}'", "'\"database\"'", 
                     "','", "'\"modifiers\"'", "'['", "']'", "'\"if_not_exists\"'", 
                     "'\"cascade\"'", "'\"encoding\"'", "'UTF-'", "'8'", 
                     "'16'", "'32'", "'\"table\"'", "'\"columns\"'", "'\"temporary\"'", 
                     "'\"unlogged\"'", "'\"name\"'", "'\"type\"'", "'\"constraints\"'", 
                     "'\"int\"'", "'\"long\"'", "'\"string\"'", "'\"uuid\"'", 
                     "'\"datetime\"'", "'\"primary\"'", "'\"unique\"'", 
                     "'\"required\"'", "'\"auto_increment\"'", "'\"default\"'", 
                     "'\"reference\"'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "STRING", "NUMBER", 
                      "BOOLEAN", "NULL", "WS" ]

    RULE_createQuery = 0
    RULE_database = 1
    RULE_databaseModifier = 2
    RULE_table = 3
    RULE_tableModifier = 4
    RULE_columnDef = 5
    RULE_columnType = 6
    RULE_columnConstraint = 7

    ruleNames =  [ "createQuery", "database", "databaseModifier", "table", 
                   "tableModifier", "columnDef", "columnType", "columnConstraint" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    STRING=35
    NUMBER=36
    BOOLEAN=37
    NULL=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CreateQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def database(self):
            return self.getTypedRuleContext(SqnCreateParser.DatabaseContext,0)


        def table(self):
            return self.getTypedRuleContext(SqnCreateParser.TableContext,0)


        def getRuleIndex(self):
            return SqnCreateParser.RULE_createQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateQuery" ):
                listener.enterCreateQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateQuery" ):
                listener.exitCreateQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateQuery" ):
                return visitor.visitCreateQuery(self)
            else:
                return visitor.visitChildren(self)




    def createQuery(self):

        localctx = SqnCreateParser.CreateQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_createQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(SqnCreateParser.T__0)
            self.state = 17
            self.match(SqnCreateParser.T__1)
            self.state = 18
            self.match(SqnCreateParser.T__2)
            self.state = 21
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 19
                self.database()
                pass

            elif la_ == 2:
                self.state = 20
                self.table()
                pass


            self.state = 23
            self.match(SqnCreateParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatabaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SqnCreateParser.STRING, 0)

        def databaseModifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqnCreateParser.DatabaseModifierContext)
            else:
                return self.getTypedRuleContext(SqnCreateParser.DatabaseModifierContext,i)


        def getRuleIndex(self):
            return SqnCreateParser.RULE_database

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatabase" ):
                listener.enterDatabase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatabase" ):
                listener.exitDatabase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDatabase" ):
                return visitor.visitDatabase(self)
            else:
                return visitor.visitChildren(self)




    def database(self):

        localctx = SqnCreateParser.DatabaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_database)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self.match(SqnCreateParser.T__0)
            self.state = 26
            self.match(SqnCreateParser.T__4)
            self.state = 27
            self.match(SqnCreateParser.T__2)
            self.state = 28
            self.match(SqnCreateParser.STRING)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 29
                self.match(SqnCreateParser.T__5)
                self.state = 30
                self.match(SqnCreateParser.T__6)
                self.state = 31
                self.match(SqnCreateParser.T__2)
                self.state = 32
                self.match(SqnCreateParser.T__7)
                self.state = 33
                self.databaseModifier()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 34
                    self.match(SqnCreateParser.T__5)
                    self.state = 35
                    self.databaseModifier()
                    self.state = 40
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 41
                self.match(SqnCreateParser.T__8)


            self.state = 45
            self.match(SqnCreateParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatabaseModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SqnCreateParser.STRING, 0)

        def getRuleIndex(self):
            return SqnCreateParser.RULE_databaseModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatabaseModifier" ):
                listener.enterDatabaseModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatabaseModifier" ):
                listener.exitDatabaseModifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDatabaseModifier" ):
                return visitor.visitDatabaseModifier(self)
            else:
                return visitor.visitChildren(self)




    def databaseModifier(self):

        localctx = SqnCreateParser.DatabaseModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_databaseModifier)
        self._la = 0 # Token type
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.match(SqnCreateParser.T__9)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.match(SqnCreateParser.T__10)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.match(SqnCreateParser.T__0)
                self.state = 50
                self.match(SqnCreateParser.T__11)
                self.state = 51
                self.match(SqnCreateParser.T__2)
                self.state = 52
                self.match(SqnCreateParser.T__12)
                self.state = 53
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 114688) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 54
                self.match(SqnCreateParser.T__3)
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.match(SqnCreateParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SqnCreateParser.STRING, 0)

        def columnDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqnCreateParser.ColumnDefContext)
            else:
                return self.getTypedRuleContext(SqnCreateParser.ColumnDefContext,i)


        def tableModifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqnCreateParser.TableModifierContext)
            else:
                return self.getTypedRuleContext(SqnCreateParser.TableModifierContext,i)


        def getRuleIndex(self):
            return SqnCreateParser.RULE_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable" ):
                listener.enterTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable" ):
                listener.exitTable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTable" ):
                return visitor.visitTable(self)
            else:
                return visitor.visitChildren(self)




    def table(self):

        localctx = SqnCreateParser.TableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_table)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(SqnCreateParser.T__0)
            self.state = 59
            self.match(SqnCreateParser.T__16)
            self.state = 60
            self.match(SqnCreateParser.T__2)
            self.state = 61
            self.match(SqnCreateParser.STRING)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 62
                self.match(SqnCreateParser.T__5)
                self.state = 63
                self.match(SqnCreateParser.T__6)
                self.state = 64
                self.match(SqnCreateParser.T__2)
                self.state = 65
                self.match(SqnCreateParser.T__7)
                self.state = 66
                self.tableModifier()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 67
                    self.match(SqnCreateParser.T__5)
                    self.state = 68
                    self.tableModifier()
                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 74
                self.match(SqnCreateParser.T__8)


            self.state = 78
            self.match(SqnCreateParser.T__3)
            self.state = 79
            self.match(SqnCreateParser.T__5)
            self.state = 80
            self.match(SqnCreateParser.T__17)
            self.state = 81
            self.match(SqnCreateParser.T__2)
            self.state = 82
            self.match(SqnCreateParser.T__7)
            self.state = 83
            self.columnDef()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 84
                self.match(SqnCreateParser.T__5)
                self.state = 85
                self.columnDef()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self.match(SqnCreateParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SqnCreateParser.STRING, 0)

        def getRuleIndex(self):
            return SqnCreateParser.RULE_tableModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableModifier" ):
                listener.enterTableModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableModifier" ):
                listener.exitTableModifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableModifier" ):
                return visitor.visitTableModifier(self)
            else:
                return visitor.visitChildren(self)




    def tableModifier(self):

        localctx = SqnCreateParser.TableModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tableModifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 34361312256) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SqnCreateParser.STRING, 0)

        def columnType(self):
            return self.getTypedRuleContext(SqnCreateParser.ColumnTypeContext,0)


        def columnConstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqnCreateParser.ColumnConstraintContext)
            else:
                return self.getTypedRuleContext(SqnCreateParser.ColumnConstraintContext,i)


        def getRuleIndex(self):
            return SqnCreateParser.RULE_columnDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDef" ):
                listener.enterColumnDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDef" ):
                listener.exitColumnDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnDef" ):
                return visitor.visitColumnDef(self)
            else:
                return visitor.visitChildren(self)




    def columnDef(self):

        localctx = SqnCreateParser.ColumnDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_columnDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(SqnCreateParser.T__0)
            self.state = 96
            self.match(SqnCreateParser.T__20)
            self.state = 97
            self.match(SqnCreateParser.T__2)
            self.state = 98
            self.match(SqnCreateParser.STRING)
            self.state = 99
            self.match(SqnCreateParser.T__5)
            self.state = 100
            self.match(SqnCreateParser.T__21)
            self.state = 101
            self.match(SqnCreateParser.T__2)
            self.state = 102
            self.columnType()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 103
                self.match(SqnCreateParser.T__5)
                self.state = 104
                self.match(SqnCreateParser.T__22)
                self.state = 105
                self.match(SqnCreateParser.T__2)
                self.state = 106
                self.match(SqnCreateParser.T__7)
                self.state = 107
                self.columnConstraint()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 108
                    self.match(SqnCreateParser.T__5)
                    self.state = 109
                    self.columnConstraint()
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 115
                self.match(SqnCreateParser.T__8)


            self.state = 119
            self.match(SqnCreateParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SqnCreateParser.STRING, 0)

        def getRuleIndex(self):
            return SqnCreateParser.RULE_columnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnType" ):
                listener.enterColumnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnType" ):
                listener.exitColumnType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnType" ):
                return visitor.visitColumnType(self)
            else:
                return visitor.visitChildren(self)




    def columnType(self):

        localctx = SqnCreateParser.ColumnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_columnType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 34879832064) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SqnCreateParser.STRING, 0)

        def getRuleIndex(self):
            return SqnCreateParser.RULE_columnConstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnConstraint" ):
                listener.enterColumnConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnConstraint" ):
                listener.exitColumnConstraint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnConstraint" ):
                return visitor.visitColumnConstraint(self)
            else:
                return visitor.visitChildren(self)




    def columnConstraint(self):

        localctx = SqnCreateParser.ColumnConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_columnConstraint)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(SqnCreateParser.T__28)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(SqnCreateParser.T__29)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.match(SqnCreateParser.T__30)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.match(SqnCreateParser.T__31)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 127
                self.match(SqnCreateParser.T__0)
                self.state = 128
                self.match(SqnCreateParser.T__32)
                self.state = 129
                self.match(SqnCreateParser.T__2)
                self.state = 130
                self.match(SqnCreateParser.STRING)
                self.state = 131
                self.match(SqnCreateParser.T__3)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 132
                self.match(SqnCreateParser.T__0)
                self.state = 133
                self.match(SqnCreateParser.T__33)
                self.state = 134
                self.match(SqnCreateParser.T__2)
                self.state = 135
                self.match(SqnCreateParser.STRING)
                self.state = 136
                self.match(SqnCreateParser.T__3)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 137
                self.match(SqnCreateParser.STRING)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





